--- a/.github/actions/notify-deployment-started/action.yml
+++ b/.github/actions/notify-deployment-started/action.yml
@@ -1,4 +1,4 @@
-name: Slack notify
+name: Notify deployment started
 description: Notifies to slack via a message on a given channel
 
 inputs:
@@ -7,31 +7,34 @@ inputs:
     required: true
   prod_branch:
     description: 'The branch for production deployments'
-    default: main
+    default: prod
   staging_branch:
     description: 'The branch for staging deployments'
-    default: develop
+    default: master
   app_name:
     description: 'The name of the app being deployed'
     required: true
     default: Metronome app
-  slack_channel:
-    description: 'The name of channel to notify on'
+  prod_slack_channel:
+    description: 'The name of channel to notify on for production deployments'
     required: true
     default: ar-team-priv
-  slack_mention:
-    description: 'The mention to include in the message'
+  staging_slack_channel:
+    description: 'The name of channel to notify on for staging deployments'
+    required: true
+    default: ar-team-priv
+  prod_slack_mention:
+    description: 'The mention to include in the message for production deployments'
+    required: true
+    default: <!here>
+  staging_slack_mention:
+    description: 'The mention to include in the message for staging deployments'
     required: true
     default: <!here>
 runs:
   using: composite
   steps:
-    - name: Show GitHub context
-      env:
-        GITHUB_CONTEXT: ${{ toJson(github) }}
-      run: echo "$GITHUB_CONTEXT"
-      shell: bash
-    # This step is necessary otherwise using github.event.head_commit.message directly would break the yml when the commit message had linebreaks
+    # This step is necessary otherwise using github.event.head_commit.message directly would break the yml if the commit message has linebreaks
     - name: Prepare commit message
       id: slack-prepare
       run: |
@@ -41,13 +44,13 @@ runs:
     - name: Notify staging deploy started
       id: slack_staging_start
       uses: slackapi/slack-github-action@v1.23.0
-      if: ${{ github.ref_name == 'develop' }}
+      if: ${{ github.ref_name == inputs.staging_branch }}
       with:
         payload: |
           {
-            "channel": "${{ inputs.slack_channel }}",
+            "channel": "${{ inputs.staging_slack_channel }}",
             "username": "Github Actions Deployment Monitor",
-            "text": "${{ inputs.slack_mention }} A deploy to ${{ inputs.app_name }} in staging is starting - ${{ steps.slack-prepare.outputs.commit-message }}",
+            "text": "${{ inputs.staging_slack_mention }} A deploy to ${{ inputs.app_name }} in staging is starting - ${{ steps.slack-prepare.outputs.commit-message }}",
             "icon_emoji": ":github:"
           }
       env:
@@ -55,13 +58,13 @@ runs:
     - name: Notify prod deploy started
       id: slack_prod_start
       uses: slackapi/slack-github-action@v1.23.0
-      if: ${{ github.ref_name == 'main' }}
+      if: ${{ github.ref_name == inputs.prod_branch' }}
       with:
         payload: |
           {
-            "channel": "${{ inputs.slack_channel }}",
+            "channel": "${{ inputs.prod_slack_channel }}",
             "username": "Github Actions Deployment Monitor",
-            "text": "${{ inputs.slack_mention }} A deploy to ${{ inputs.app_name }} in prod is starting - ${{ toJSON(github.event.head_commit.message) }}",
+            "text": "${{ inputs.prod_slack_mention }} A deploy to ${{ inputs.app_name }} in prod is starting - ${{ toJSON(github.event.head_commit.message) }}",
             "icon_emoji": ":github:"
           }
       env:
