--- a/.github/actions/notify-deployment-finished/action.yml
+++ b/.github/actions/notify-deployment-finished/action.yml
@@ -1,4 +1,4 @@
-name: Slack notify
+name: Notify deployment finished
 description: Notifies to slack via a message on a given channel
 
 inputs:
@@ -7,23 +7,30 @@ inputs:
     required: true
   prod_branch:
     description: 'The branch for production deployments'
-    default: main
+    default: prod
   staging_branch:
     description: 'The branch for staging deployments'
-    default: develop
+    default: master
   app_name:
     description: 'The name of the app being deployed'
     required: true
     default: Metronome app
-  slack_channel:
-    description: 'The name of channel to notify on'
+  prod_slack_channel:
+    description: 'The name of channel to notify on for production deployments'
     required: true
     default: ar-team-priv
-  slack_mention:
-    description: 'The mention to include in the message'
+  staging_slack_channel:
+    description: 'The name of channel to notify on for staging deployments'
+    required: true
+    default: ar-team-priv
+  prod_slack_mention:
+    description: 'The mention to include in the message for production deployments'
     required: true
     default: <!here>
-
+  staging_slack_mention:
+    description: 'The mention to include in the message for staging deployments'
+    required: true
+    default: <!here>
 runs:
   using: composite
   steps:
@@ -34,9 +41,9 @@ runs:
       with:
         payload: |
           {
-            "channel": "${{ inputs.slack_channel }}",
+            "channel": "${{ inputs.prod_slack_channel }}",
             "username": "Github Actions Deployment Monitor",
-            "text": "${{ inputs.slack_mention }} A deploy to ${{ inputs.app_name }} in prod has just finished.",
+            "text": "${{ inputs.prod_slack_mention }} A deploy to ${{ inputs.app_name }} in prod has just finished.",
             "icon_emoji": ":github:"
           }
       env:
@@ -48,9 +55,9 @@ runs:
       with:
         payload: |
           {
-            "channel": "${{ inputs.slack_channel }}",
+            "channel": "${{ inputs.staging_slack_channel }}",
             "username": "Github Actions Deployment Monitor",
-            "text": "${{ inputs.slack_mention }} A deploy to ${{ inputs.app_name }} in staging has just finished.",
+            "text": "${{ inputs.staging_slack_mention }} A deploy to ${{ inputs.app_name }} in staging has just finished.",
             "icon_emoji": ":github:"
           }
       env:
