--- a/.github/workflows/test-notify-slack.yml
+++ b/.github/workflows/test-notify-slack.yml
@@ -17,8 +17,8 @@ jobs:
           prod_branch: main
           staging_slack_channel: "@leandro"
           prod_slack_channel: "@leandro"
-          staging_slack_mention: <@leandro>
-          prod_slack_mention: <@leandro>
+          staging_slack_mention: <@U02NAUG2VUG>
+          prod_slack_mention: <@U02NAUG2VUG>
       - name: Notify deployment finished
         uses: ./.github/actions/notify-deployment-finished
         with:
@@ -28,8 +28,8 @@ jobs:
           prod_branch: main
           staging_slack_channel: "klasdajsdkas"
           prod_slack_channel: "@leandro"
-          staging_slack_mention: <@leandro>
-          prod_slack_mention: <@leandro>
+          staging_slack_mention: <@U02NAUG2VUG>
+          prod_slack_mention: <@U02NAUG2VUG>
 
       - name: Notify deployment failed
         if: failure()
@@ -38,4 +38,5 @@ jobs:
           slack_webhook: ${{ secrets.SLACK_WEBHOOK }}
           app_name: Metronome app
           slack_channel: "@leandro"
-          slack_mention: <@leandro>
+          staging_slack_mention: <@U02NAUG2VUG>
+          prod_slack_mention: <@U02NAUG2VUG>
