test slack notification 90
dasd asd

--- a/.github/workflows/test-notify-slack.yml
+++ b/.github/workflows/test-notify-slack.yml
@@ -26,7 +26,7 @@ jobs:
           app_name: Metronome app
           staging_branch: develop
           prod_branch: main
-          staging_slack_channel: "klasdajsdkas"
+          staging_slack_channel: "@leandro"
           prod_slack_channel: "@leandro"
           staging_slack_mention: <@U02NAUG2VUG>
           prod_slack_mention: <@U02NAUG2VUG>
@@ -37,6 +37,7 @@ jobs:
         with:
           slack_webhook: ${{ secrets.SLACK_WEBHOOK }}
           app_name: Metronome app
-          slack_channel: "@leandro"
+          staging_slack_channel: "@leandro"
+          prod_slack_channel: "@leandro"
           staging_slack_mention: <@U02NAUG2VUG>
           prod_slack_mention: <@U02NAUG2VUG>
