--- a/.github/workflows/test-notify-slack.yml
+++ b/.github/workflows/test-notify-slack.yml
@@ -4,40 +4,9 @@ jobs:
   slackNotification:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-      - name: Notify deployment started
-        uses: ./.github/actions/notify-deployment-started
-        with:
-          slack_webhook: ${{ secrets.SLACK_WEBHOOK }}
-          app_name: Metronome app
-          staging_branch: develop
-          prod_branch: main
-          staging_slack_channel: "@leandro"
-          prod_slack_channel: "@leandro"
-          staging_slack_mention: <@U02NAUG2VUG>
-          prod_slack_mention: <@U02NAUG2VUG>
-      - name: Notify deployment finished
-        uses: ./.github/actions/notify-deployment-finished
-        with:
-          slack_webhook: ${{ secrets.SLACK_WEBHOOK }}
-          app_name: Metronome app
-          staging_branch: develop
-          prod_branch: main
-          staging_slack_channel: "lakjkldasjd"
-          prod_slack_channel: "@leandro"
-          staging_slack_mention: <@U02NAUG2VUG>
-          prod_slack_mention: <@U02NAUG2VUG>
-
-      - name: Notify deployment failed
-        if: failure()
-        uses: ./.github/actions/notify-deployment-failed
-        with:
-          slack_webhook: ${{ secrets.SLACK_WEBHOOK }}
-          app_name: Metronome app
-          staging_slack_channel: "@leandro"
-          prod_slack_channel: "@leandro"
-          staging_slack_mention: <@U02NAUG2VUG>
-          prod_slack_mention: <@U02NAUG2VUG>
+      - name: Test if environment secrets work
+        id: test-foo
+        run: |
+          echo "${secrets.TEST_SECRET}"
+        shell: bash
+      
