--- a/.github/workflows/test-notify-slack.yml
+++ b/.github/workflows/test-notify-slack.yml
@@ -5,12 +5,23 @@ env:
   testEnv: ${{ vars.TEST_ENV }}
   
 jobs:
-  fooBar:
+  deploy-staging:
+    name: Deploy to Staging
+    environment:
+      name: staging
+    if: github.event.ref == 'refs/heads/develop'
     runs-on: ubuntu-latest
     steps:
-      - name: Test if environment variables work
-        id: test-foo
-        run: |
-          echo "variable from shell environment : ${{ env.TEST_ENV }}"
-        shell: bash
+      - run: echo Deploy to staging using secret "${{ secrets.TEST_SECRET }}" & var "${{ env.TEST_ENV }}"
+  
+  deploy-production:
+    name: Deploy to Production
+    environment:
+      name: production
+    if: github.event.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo Deploy to production using secret "${{ secrets.TEST_SECRET }}" & var "${{ env.TEST_ENV }}"
+
+
       
