--- a/.github/workflows/test-notify-slack.yml
+++ b/.github/workflows/test-notify-slack.yml
@@ -12,7 +12,7 @@ jobs:
     if: github.event.ref == 'refs/heads/develop'
     runs-on: ubuntu-latest
     steps:
-      - run: echo Deploy to staging using secret "${{ secrets.TEST_SECRET }}" & var "${{ env.TEST_ENV }}"
+      - run: echo Deploy to staging using secret ${{ secrets.TEST_SECRET }}
   
   deploy-production:
     name: Deploy to Production
@@ -21,7 +21,7 @@ jobs:
     if: github.event.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
-      - run: echo Deploy to production using secret "${{ secrets.TEST_SECRET }}" & var "${{ env.TEST_ENV }}"
+      - run: echo Deploy to production using secret ${{ secrets.TEST_SECRET }}
 
 
       
