--- a/.github/workflows/deploy-test.yml
+++ b/.github/workflows/deploy-test.yml
@@ -5,23 +5,14 @@ env:
   testEnv: ${{ vars.TEST_ENV }}
   
 jobs:
-  deploy-staging:
-    name: Deploy to Staging
+  deploy:
+    name: Deploy
     environment:
-      name: staging
-    if: github.event.ref == 'refs/heads/develop'
+      name: ${{ github.event.ref == 'refs/heads/develop' && 'staging' || 'production' }}
     runs-on: ubuntu-latest
     steps:
       - run: "echo Deploy to staging using var TEST_ENV: ${{ vars.TEST_ENV }}"
   
-  deploy-production:
-    name: Deploy to Production
-    environment:
-      name: production
-    if: github.event.ref == 'refs/heads/main'
-    runs-on: ubuntu-latest
-    steps:
-      - run: "echo Deploy to production using var TEST_ENV: ${{ vars.TEST_ENV }}"
 
 
       
