--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -7,7 +7,7 @@ on:
   
 jobs:
   deploy:
-    uses: leanazulyoro/test_gh_actions/.github/workflows/reusable-deploy.yml@master
+    uses: leanazulyoro/test_gh_actions/.github/workflows/reusable-deploy.yml@develop
     with:
       environment: production
 
