test reusable workflows

--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -7,7 +7,7 @@ on:
   
 jobs:
   deploy:
-    uses: leanazulyoro/test_gh_actions/.github/workflows/reusable-deploy.yml@develop
+    uses: /workflows/reusable-deploy
     with:
       environment: staging
 
