--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -7,7 +7,7 @@ on:
   
 jobs:
   deploy:
-    uses: workflows/reusable-deploy
+    uses: ./.github/workflows/reusable-deploy
     with:
       environment: production
 
