test reusable workflows

--- a/.github/workflows/reusable-deploy.yml
+++ b/.github/workflows/reusable-deploy.yml
@@ -17,7 +17,12 @@ jobs:
     environment:
       name: ${{ inputs.environment }}
     runs-on: ubuntu-latest
+    
     steps:
+      - name: Sleep for 30 seconds
+          uses: jakejarvis/wait-action@master
+          with:
+            time: '30s'
       - run: "echo Deploy to ${{ inputs.environment }} using var TEST_ENV: ${{ vars.TEST_ENV }}"
   
 
