test reusable workflows

--- a/.github/workflows/reusable-deploy.yml
+++ b/.github/workflows/reusable-deploy.yml
@@ -6,7 +6,9 @@ on:
         required: true
         type: string
 
-concurrency: ci-${{ github.ref }}
+concurrency:
+  group: ci-${{ github.ref }}
+  cancel-in-progress: true
 
 env:
   testEnv: ${{ vars.TEST_ENV }}
