--- a/.github/actions/notify-deployment-started/action.yml
+++ b/.github/actions/notify-deployment-started/action.yml
@@ -64,7 +64,7 @@ runs:
           {
             "channel": "${{ inputs.prod_slack_channel }}",
             "username": "Github Actions Deployment Monitor",
-            "text": "${{ format('{0} A deploy to ${1} in prod is starting - {2}', inputs.prod_slack_mention, inputs.app_name, github.event.head_commit.message) }}",
+            "text": "${{ inputs.prod_slack_mention }} A deploy to ${{ inputs.app_name }} in prod is starting - ${{ github.event.head_commit.message }}",
             "icon_emoji": ":github:"
           }
       env:
