--- a/.github/actions/notify-deployment-started/action.yml
+++ b/.github/actions/notify-deployment-started/action.yml
@@ -38,7 +38,7 @@ runs:
     - name: Prepare commit message
       id: slack-prepare
       run: |
-        COMMIT_MESSAGE=${{ toJSON(github.event.head_commit.message) }}
+        COMMIT_MESSAGE=${{ toJSON(toJSON(github.event.head_commit.message)) }}
         echo "::set-output name=commit-message::${COMMIT_MESSAGE}"
       shell: bash
     - name: Notify staging deploy started
