Test commit with "quotes 25" sdsd

--- a/.github/actions/notify-deployment-started/action.yml
+++ b/.github/actions/notify-deployment-started/action.yml
@@ -38,8 +38,8 @@ runs:
     - name: Prepare commit message
       id: slack-prepare
       run: |
-        COMMIT_MESSAGE='${{ github.event.head_commit.message }}'
-        echo "::set-output name=commit-message::${COMMIT_MESSAGE//\"/'}"
+        COMMIT_MESSAGE=${{ toJSON(toJSON(github.event.head_commit.message)) }}
+        echo "::set-output name=commit-message::${COMMIT_MESSAGE}"
       shell: bash
     - name: Notify staging deploy started
       id: slack_staging_start
