--- a/.github/actions/notify-deployment-started/action.yml
+++ b/.github/actions/notify-deployment-started/action.yml
@@ -41,6 +41,7 @@ runs:
         source: ${{ github.event.head_commit.message }} 
         find: '"' 
         replace: '\\"'
+        replaceAll: 'true'
       id: slack-prepare
     - name: Notify staging deploy started
       id: slack_staging_start
