Test commit with "quotes 49"
Also line breaks!

--- a/.github/actions/notify-deployment-started/action.yml
+++ b/.github/actions/notify-deployment-started/action.yml
@@ -52,7 +52,7 @@ runs:
           {
             "channel": "${{ inputs.staging_slack_channel }}",
             "username": "Github Actions Deployment Monitor",
-            "text": "foo \"bar\" lorem",
+            "text": "${{ format('{0}', 'hola')}}",
             "icon_emoji": ":github:"
           }
       env:
