--- a/.github/actions/notify-deployment-started/action.yml
+++ b/.github/actions/notify-deployment-started/action.yml
@@ -43,7 +43,7 @@ runs:
           {
             "channel": "${{ inputs.staging_slack_channel }}",
             "username": "Github Actions Deployment Monitor",
-            "text": "${{ format('{0}', 'foo \"bar\" lorem') }}",
+            "text": "${{ format('{0}', github.event.head_commit.message) }}",
             "icon_emoji": ":github:"
           }
       env:
