--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,7 @@ jobs:
           prod_slack_channel: D02MM7KJP0A
           prod_slack_mention: <@D02MM7KJP0A>
           
-      - run: "echo Deploy to ${{ inputs.environment }} using var TEST_ENV: ${{ vars.TEST_ENV }}"
+      - run: "echo Deploy to ${{ inputs.environment }} using var TEST_ENV: ${{ vars.TEST_ENV }}. with a repository secret: ${{ secrets.MY_REPO_SECRET }}"
   
 
 
