Test repository secrets in reusable workflows

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
         type: string
     secrets:
       MY_REPO_SECRET:
-        required: true
+        required: false
         
 concurrency:
   group: ci-${{ github.ref }}
