--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -10,6 +10,8 @@ jobs:
     uses: ./.github/workflows/deploy.yml
     with:
       environment: staging
+    secrets:
+      MY_REPO_SECRET: ${{ secrets.MY_REPO_SECRET }}
 
 
       
