--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,8 +36,8 @@ jobs:
           prod_slack_channel: D02MM7KJP0A
           prod_slack_mention: <@D02MM7KJP0A>
         
-      - name: head_commit
-        env: { CONTENT: "${{ toJson(github.env.head_commit) }}" }
+      - name: github.env
+        env: { CONTENT: "${{ toJson(github.env) }}" }
         run: "echo $CONTENT"
 
 
